--- a/portal.css
+++ b/portal.css
@@ -16,13 +16,9 @@ header {
 h1 {
     width: 75%;
     text-align: center;
-    font-size: 3.5em;
+    font-size: 50px;
     margin-top: 12px;
     margin-left: 5%;
-}
-
-h2 {
-    font-size: 1.8em;
 }
 
 hr {
@@ -37,7 +33,6 @@ main {
 footer {
     background-color: #145A32;
     color: wheat;
-    font-size: 1em;
     margin-top: 8%;
     text-align: center;
     padding-top: 25px;
