--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -21,6 +21,36 @@
     max-width: 80%;
   }
 
+  #banner {
+    height: 25px;
+  }
+
+  .content-box-2 {
+    display: block;
+  }
+
+  .content-box-3 img {
+    padding-left: 5px;
+    float: right;
+    width: 200px;
+    height: 200px;
+  }
+
+  .content-box-4 {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  #contact {
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  .content-box-4 img {
+    grid-column: 1;
+    grid-row: 1;
+    height: 280px;
+  }
+
   main {
     max-width: 700px;
   }
