--- a/lesson5/css/preston.css
+++ b/lesson5/css/preston.css
@@ -3,6 +3,15 @@ a {
   font-weight: bold;
 }
 
+#banner {
+  display: none;
+  background-color: whitesmoke;
+  text-align: center;
+  font-size: 1.2em;
+  padding: 5px;
+  font-weight: bold;
+}
+
 main {
   margin: auto;
 }
@@ -38,13 +47,87 @@ h2 {
   text-align: center;
 }
 
-.content-box {
-  width: 80%;
-  display: block;
+h3 {
+  text-decoration: underline;
+  text-align: center;
+}
+
+.content-box-1 {
   margin: 10px auto;
-  padding: 15px;
-  background-color: gray;
-  color: white;
+  position: relative;
+}
+
+.content-box-1 img {
+  width: 100%;
+  height: 400px;
+
+}
+
+.box-summary {
+  position: absolute;
+  width: 20%;
+  top: 30px;
+  left: 30px;
+  font-size: 12px;
+  text-align: center;
+  background: radial-gradient(#eee, #EDF5E1);
+  border: 1px soild #000;
+  padding: 5px;
+  box-shadow: 0 0 30px black;
+  opacity: 0.8;
+}
+
+.content-box-2 {
+  display: none;
+}
+
+#table {
+  margin: 0 auto;
+  width: 700px;
+  text-align: center;
+}
+
+#inside-table {
+  background-color: #BC986A;
+  color: #FBEEC1;
+}
+
+.content-box-3 {
+  display: block;
+  margin-top: 15px;
+  padding: 10px;
+  border: 1px solid black;
+  color: black;
+}
+
+.content-box-3 img {
+  width: 100%;
+  box-shadow: 0 0 10px black;
+}
+
+
+.content-box-4 {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding: 10px;
+  border: 1px solid black;
+}
+
+.content-box-4 img {
+  margin: auto;
+  border: 1px solid black;
+}
+
+#contact {
+  grid-column: 1;
+  margin: auto;
+}
+
+#contact p {
+  text-align: center;
+  color: black;
 }
 
 .sub-heading {
