--- a/lesson6/css/preston.css
+++ b/lesson6/css/preston.css
@@ -71,7 +71,7 @@ h3 {
   font-size: 12px;
   text-align: center;
   background: radial-gradient(#eee, #EDF5E1);
-  border: 1px soild #000;
+  border: 1px solid #000;
   padding: 5px;
   box-shadow: 0 0 30px black;
   opacity: 0.8;
