--- a/lesson7/css/gallery.css
+++ b/lesson7/css/gallery.css
@@ -47,11 +47,6 @@ h2 {
   text-align: center;
 }
 
-h3 {
-  text-decoration: underline;
-  text-align: center;
-}
-
 img[data-src] {
   filter: blur(0.4em);
 }
@@ -65,104 +60,27 @@ img[data-src] {
   filter: blur(30px);
 }
 
-#gallery_imgs {
+.container {
   display: grid;
   grid-template-columns: 1fr;
   gap: 15px;
 }
 
-#gallery_imgs figure {
+.container figure {
   box-shadow: 0 0 20px black;
-  margin: 0;
+  margin: 5px;
   padding: 0;
 }
 
-#gallery_imgs figcaption {
+.container figcaption {
   background-color: white;
   font-size: 15px;
   color: black;
   text-align: center;
 }
 
-.galleryImage {
+.container img {
   width: 100%;
-}
-
-.content-box-1 {
-  margin: 10px auto;
-  position: relative;
-}
-
-.content-box-1 img {
-  width: 100%;
-  height: 400px;
-}
-
-.box-summary {
-  position: absolute;
-  width: 20%;
-  top: 30px;
-  left: 30px;
-  font-size: 12px;
-  text-align: center;
-  background: radial-gradient(#eee, #EDF5E1);
-  border: 1px solid #000;
-  padding: 5px;
-  box-shadow: 0 0 30px black;
-  opacity: 0.8;
-}
-
-.content-box-2 {
-  display: none;
-}
-
-#table {
-  margin: 0 auto;
-  width: 700px;
-  text-align: center;
-}
-
-#inside-table {
-  background-color: #BC986A;
-  color: #FBEEC1;
-}
-
-.content-box-3 {
-  display: block;
-  margin-top: 15px;
-  padding: 10px;
-  border: 1px solid black;
-  color: black;
-}
-
-.content-box-3 img {
-  width: 100%;
-  box-shadow: 0 0 10px black;
-}
-
-
-.content-box-4 {
-  display: grid;
-  grid-template-columns: 1fr;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  padding: 10px;
-  border: 1px solid black;
-}
-
-.content-box-4 img {
-  margin: auto;
-  border: 1px solid black;
-}
-
-#contact {
-  grid-column: 1;
-  margin: auto;
-}
-
-#contact p {
-  text-align: center;
-  color: black;
 }
 
 .sub-heading {
