--- a/lesson7/css/large.css
+++ b/lesson7/css/large.css
@@ -12,11 +12,11 @@
     font-size: 40px;
   }
 
-  #gallery_imgs {
+  .container {
     grid-template-columns: 1fr 1fr 1fr;
   }
 
-  #gallery_imgs figure:hover {
+  .container figure:hover {
     box-shadow: 0 0 50px gray;
   }
 
