--- a/lesson7/css/medium.css
+++ b/lesson7/css/medium.css
@@ -5,7 +5,7 @@
     margin-top: 0px;
   }
 
-  #gallery_imgs {
+  .container {
     grid-template-columns: 1fr 1fr;
   }
 
@@ -27,32 +27,6 @@
 
   #banner {
     height: 25px;
-  }
-
-  .content-box-2 {
-    display: block;
-  }
-
-  .content-box-3 img {
-    padding-left: 5px;
-    float: right;
-    width: 200px;
-    height: 200px;
-  }
-
-  .content-box-4 {
-    grid-template-columns: 1fr 1fr;
-  }
-
-  #contact {
-    grid-column: 2;
-    grid-row: 1;
-  }
-
-  .content-box-4 img {
-    grid-column: 1;
-    grid-row: 1;
-    height: 280px;
   }
 
   main {
