--- a/lesson8/css/stormcenter.css
+++ b/lesson8/css/stormcenter.css
@@ -35,7 +35,7 @@ form label.top, form div {
   font-size: .8rem;
 }
 
-form label.top input, form label.top select {
+form label.top input, form label.top select, form label.top textarea {
   -webkit-appearance: none;
   display: block;
   font-size: 1rem;
