--- a/lesson9/css/medium.css
+++ b/lesson9/css/medium.css
@@ -55,11 +55,12 @@
     grid-template-columns: 1fr 1fr;
   }
 
-  .cards section:nth-child(odd) img {
-    grid-column: 1;
+  .cards section:nth-child(1) #info {
+    grid-column: 2;
+    grid-row: 1;
   }
 
-  .cards section:nth-child(odd) #details {
+  .cards section:nth-child(3) #info {
     grid-column: 2;
     grid-row: 1;
   }
