--- a/lesson9/css/large.css
+++ b/lesson9/css/large.css
@@ -22,6 +22,12 @@
     height: 500px;
   }
 
+  .cards section img {
+    width: 80%;
+    height: auto;
+    padding: 5px;
+  }
+
   .container {
     grid-template-columns: 1fr 1fr 1fr;
   }
