--- a/lesson10/css/large.css
+++ b/lesson10/css/large.css
@@ -12,6 +12,14 @@
     font-size: 40px;
   }
 
+  .forecast {
+    margin-left: 250px;
+    display: grid;
+    width: 50%;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    text-align: center;
+  }
+
   footer {
     margin-top: 3%;
     padding: 10px 10px 20px 10px;
