--- a/lesson10/css/preston.css
+++ b/lesson10/css/preston.css
@@ -57,6 +57,19 @@ h3 {
   position: relative;
 }
 
+#temp1, #temp2, #temp3, #temp4, #temp5 {
+  color: #05386b;
+  font-size: 1.2em;
+}
+
+#day1, #day2, #day3, #day4, #day5 {
+  background-color: #8ee4af;
+  color: #05386b;
+  font-size: 1.2em;
+  font-weight: bolder;
+  text-align: center;
+}
+
 .content-box-1 img {
   width: 100%;
   height: 400px;
@@ -79,17 +92,6 @@ h3 {
 
 .content-box-2 {
   display: none;
-}
-
-#table {
-  margin: 0 auto;
-  width: 700px;
-  text-align: center;
-}
-
-#inside-table {
-  background-color: #BC986A;
-  color: #FBEEC1;
 }
 
 .content-box-3 {
