--- a/lesson10/css/preston.css
+++ b/lesson10/css/preston.css
@@ -59,13 +59,13 @@ h3 {
 
 #temp1, #temp2, #temp3, #temp4, #temp5 {
   color: #05386b;
-  font-size: 1.2em;
+  font-size: 18px;
 }
 
 #day1, #day2, #day3, #day4, #day5 {
-  background-color: #8ee4af;
-  color: #05386b;
-  font-size: 1.2em;
+  background-color: #BC986A;
+  color: #FBEEC1;
+  font-size: 18px;
   font-weight: bolder;
   text-align: center;
 }
@@ -73,7 +73,6 @@ h3 {
 .content-box-1 img {
   width: 100%;
   height: 400px;
-
 }
 
 .box-summary {
