--- a/lesson11/css/large.css
+++ b/lesson11/css/large.css
@@ -9,7 +9,7 @@
   }
 
   h2 {
-    font-size: 40px;
+    font-size: 35px;
   }
 
   .content {
@@ -22,6 +22,18 @@
     width: 50%;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     text-align: center;
+  }
+
+  .events {
+    border: 1px solid #000;
+    box-shadow: 2px 2px gray;
+    margin: 15px auto;
+    text-align: center;
+    width: 50%;
+  }
+  
+  .events hr {
+    width: 85%;
   }
 
   footer {
