--- a/lesson11/css/medium.css
+++ b/lesson11/css/medium.css
@@ -6,7 +6,7 @@
   }
 
   h2 {
-    font-size: 25px;
+    font-size: 30px;
   }
 
   header img {
@@ -82,6 +82,22 @@
 
   .navigation li:first-child {
     display: none;
+  }
+
+  .events {
+    border: 1px solid #000;
+    box-shadow: 2px 2px gray;
+    margin: 15px auto;
+    text-align: center;
+    width: 50%;
+  }
+  
+  .events hr {
+    width: 85%;
+  }
+
+  .events h3 {
+    font-size: 20px;
   }
 
   footer {
