--- a/lesson9/css/medium.css
+++ b/lesson9/css/medium.css
@@ -13,6 +13,22 @@
     font-size: 25px;
   }
 
+  .content {
+    border: 1px solid black;
+  }
+
+  .forecast {
+    margin-left: 170px;
+    display: grid;
+    width: 50%;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    text-align: center;
+  }
+
+  .content-box-2 {
+    display: block;
+  }
+
   header img {
     height: 125px;
     width: auto;
