--- a/scoots/css/home.css
+++ b/scoots/css/home.css
@@ -47,6 +47,11 @@ h2 {
   text-align: center;
 }
 
+h3 {
+  color: #823038;
+  text-align: center;
+}
+
 img[data-src] {
   filter: blur(0.4em);
 }
@@ -87,7 +92,7 @@ img[data-src] {
   margin-top: -10%;
   margin-left: 5%;
   font-style: italic;
-  font-size: .9em;
+  font-size: 15px;
   letter-spacing: 1pt;
   color:  #823038;
 }
@@ -134,6 +139,7 @@ nav {
 
 #wireframe {
   text-align: center;
+  padding-bottom: 10px;
 }
 
 #wireframe a {
@@ -158,6 +164,39 @@ nav {
   width: 70%;
   height: auto;
   padding: 5px;
+}
+
+.box-summary {
+  position: relative;
+  width: 25%;
+  height: 10%;
+  bottom: 12px;
+  left: 37%;
+  padding-top: 10px;
+  font-size: 12px;
+  text-align: center;
+  background: radial-gradient(#eee, #EDF5E1);
+  border: 1px solid #000;
+  padding: 5px;
+  box-shadow: 0 0 5px black;
+  opacity: 0.8;
+}
+
+.content-box-2 {
+  display: none;
+}
+
+#temps {
+  color: #823038;
+  font-size: 18px;
+}
+
+#days {
+  background-color: #50858B;
+  color: #EFE5DC;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
 }
 
 footer {
