--- a/scoots/css/preston.css
+++ b/scoots/css/preston.css
@@ -1,5 +1,5 @@
 a {
-  color: #FBEEC1;
+  color: #EFE5DC;
   font-weight: bold;
 }
 
@@ -18,12 +18,12 @@ main {
 
 body {
   margin: 0 auto;
-  background-color: #FFFDE7;
+  background-color: #EFE5DC;
   font-family: 'Poppins', sans-serif;
 }
 
 header {
-  color: #FBEEC1;
+  color: #823038;
   align-items: center;
   justify-content: center;
   display: flex;
@@ -37,13 +37,13 @@ header img {
 }
 
 h1 {
-  color: #659DBD;
+  color: #823038;
   display: flex;
   align-items: center;
 }
 
 h2 {
-  color: #659DBD;
+  color: #823038;
   text-align: center;
 }
 
@@ -155,7 +155,7 @@ h3 {
 nav {
   width: 80%;
   margin: 0 auto;
-  background-color: #BC986A;
+  background-color: #50858B;
   box-shadow: 0 2px 15px gray;
 }
 
@@ -181,11 +181,11 @@ nav {
 }
 
 .navigation a:hover {
-  background-color: #a07032;
+  background-color: #5497A7;
 }
 
 .active {
-  background-color: #89581a;
+  background-color: #0074aa;
 }
 
 .responsive li {
@@ -194,8 +194,8 @@ nav {
 
 footer {
   padding: 5px 5px 10px 5px;
-  background-color: #BC986A;
-  color: #FBEEC1;
+  background-color: #50858B;
+  color: #EFE5DC;
   font-size: 14px;
   text-align: center;
   margin: 0 auto;
