--- a/scoots/css/preston.css
+++ b/scoots/css/preston.css
@@ -19,7 +19,7 @@ main {
 body {
   margin: 0 auto;
   background-color: #EFE5DC;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Catamaran', sans-serif;
 }
 
 header {
