--- a/scoots/css/preston.css
+++ b/scoots/css/preston.css
@@ -115,9 +115,34 @@ h3 {
 
 .content-box-3 img {
   width: 100%;
-  box-shadow: 0 0 10px black;
 }
 
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-yahoo {
+  background: #430297;
+  color: white;
+}
 
 .content-box-4 {
   display: grid;
